clusters/prod/apps/gvasiliourolex/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gvasiliourolex
  namespace: gvasiliourolex
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gvasiliourolex
  ports:
    - name: http
      port: 80
      targetPort: http
